--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,14 @@ captures/
 
 # Intellij
 *.iml
-.idea
-
+.idea/workspace.xml
+.idea/libraries
+.idea/scopes
+.idea/.name
+.idea/dictionaries
+.idea/copyright
+.idea/gradle.xml
+.idea/modules.xml
 
 # Keystore files
 *.jks
