--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,12 +17,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions{
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
+    def exoplayer_version = "2.10.2"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.android.volley:volley:1.1.0'
-    implementation 'com.google.android.exoplayer:exoplayer:r1.5.9'
+    implementation "com.google.android.exoplayer:exoplayer-core:${exoplayer_version}"
+    implementation "com.google.android.exoplayer:exoplayer-dash:${exoplayer_version}"
+    implementation "com.google.android.exoplayer:exoplayer-ui:${exoplayer_version}"
 }
